# witwin-radar

./: .gitignore  FEATURE_LIST.md  PERFORMANCE.md  README.md  batch_generate.py  pyproject.toml  requirements.txt
.github/workflows/: publish-witwin-radar.yml
examples/: amass_pointcloud.ipynb  amass_pointcloud.py  gen_amass_video.py  humanbody.ipynb  humanbody.py  mesh_scene.ipynb  mesh_scene.py  music_imaging.ipynb  music_imaging.py  music_imaging_body.ipynb  preprocess_rfgen_rd.py  rgbd_range_doppler.ipynb  rgbd_range_doppler.py  single_point.ipynb  single_point.py  timeline.ipynb
experiments/: gen_amass_video.py
tests/: benchmark.py  conftest.py  debug_offset.py  test_gradient_flow.py  verify.py  verify_mimo.py  verify_triangle.py
tests/core/: test_antenna_pattern.py  test_differentiable_to_mesh.py  test_multipath_smoke.py  test_noise_model.py  test_path_runtime.py  test_polarization.py  test_radar_config.py  test_radar_pose.py  test_radar_simulation.py  test_receiver_chain.py  test_scene_api.py  test_scene_motion.py  test_scene_to_mitsuba.py  test_simulation_smoke.py  test_waveform.py
tests/sigproc/: test_aoa.py  test_cfar.py  test_pointcloud_pipeline.py  test_range_doppler.py
tests/solvers/: test_chirp_cross.py  test_mimo_cross.py  test_solver_edge.py
tests/validation/: test_multi_target.py  test_single_target.py
witwin/radar/: __init__.py  antenna_pattern.py  config.py  material.py  motion.py  noise.py  polarization.py  radar.py  receiver_chain.py  renderer.py  result.py  scene.py  sensor.py  simulation.py  timeline.py  trace.py  types.py  (+1 more)
(+18 files in other folders)
